--- a/assignment.html
+++ b/assignment.html
@@ -4,23 +4,36 @@
     <meta charset="utf-8">
     <title>Geckos</title>
     <link rel="stylesheet" href="assignment.css">
-    <link rel="icon"
-        type="image/jpg"
-        href="Images/snootsreaction.JPG">
+    <link rel="icon" type="image/jpg" href="Images/snootsreaction.JPG">
 </head>
 
 <body>
-    <h1 class="h1title">Geckos: Why They're Great</h1>
-    <a class="mainnav1" href="species.html">Species</a>
-    <a class="mainnav2" href="snoots.html">My Gecko</a>
+   <header>
+        <nav>
+                <ul class="mainnav2">
+                    <li><a href="pictures.html">Pictures</a></li>
+                    <li><a href="snoots.html">My Gecko</a></li>
+                    <li><a href="species.html">Species</a></li>
+                </ul>
+            </div>
+        </nav>
+    <div class="header">
+        <h1 class="h1title">Geckos: Why They're Great</h1>
+       </div>
     <br>
     <br>
-    <p class="paragraph"> Geckos are a varied and widespread subspecies of lizards. There are plenty of different types of geckos, many suitable for reptile hobbiests and also for beginners, as their first introduction to owning reptiles.</p>
+    <p class="paragraph"> Geckos are a varied and widespread subspecies of lizards. There are plenty of different types of geckos, many suitable for reptile enthusiasts and also for beginners as their first introduction to owning reptiles.</p>
     <br>
-    <p class="paragraph">If you want to learn more about reptiles and owning reptiles, a great place to find information is <a href="http://www.pangeareptile.com/store/gecko-care-and-information.html">Pangea Reptile</a>.</p>
+    <div class="container">
+        <p class="paragraph">If you want to learn more about reptiles and owning reptiles, a great place to find information is <a href="http://www.pangeareptile.com/store/gecko-care-and-information.html">Pangea Reptile</a>. They are experienced breeders and their forums allow reptile owners across the world to communicate.</p>
+    </div>
+
     <br>
     <hr>
     <img src="Images/snootgif.gif" alt="Gif of animated lizard">
-<!--This is a commission that I paid for, and I'm not using it for commercial use, so I should be all clear with copyright laws.-->
+    <!--This is a commission that I paid for, and I'm not using it for commercial use, so I should be all clear with copyright laws.-->
+    <div class="footer">
+        <h3 class="speciestitle">Please adopt a gecko today!</h3>
+    </div>
 </body>
 </html>
