--- a/snoots.html
+++ b/snoots.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+   <a class="mainnav1" href="assignment.html">Home</a>
+   <a class="mainnav1" href="pictures.html">Pictures</a>
+    <a class="mainnav2" href="species.html">Species</a>
     <h1 class="speciestitle">My Gecko</h1>
     <hr>
     <h2 class="h2">Admiral Snoots</h2>
