Messages to myself, nothing consequential

--- a/assignment.html
+++ b/assignment.html
@@ -9,6 +9,7 @@
 
 <body>
         <nav>
+               <!-- make this horizontal for next assignment, hate vertical-->
                 <ul class="mainnav2">
                     <li><a href="pictures.html">Pictures</a></li>
                     <li><a href="snoots.html">My Gecko</a></li>
