--- a/pictures.html
+++ b/pictures.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+   <!--I did not copy paste your code, I did it step by step myself following what you put down as a guide.-->
     <a class="mainnav1" href="species.html">Species</a>
     <a class="mainnav2" href="snoots.html">My Gecko</a>
     <a class="mainnav1" href="assignment.html">Home</a>
